fix mobile spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -350,8 +350,11 @@ body {
 
 @media only screen and (max-width: 750px) {
   :root {
-    --page-padding: 0px;
     --puzzle-cell-size: calc(100vw / var(--puzzle-column-count) - 2 * var(--puzzle-cell-spacing));
+  }
+
+  .root {
+    padding: 0;
   }
 
   // TODO: Add info panel
